# monopay

./: .gitignore  README.md
docs/: api-contract.md  architecture.md  build-sequence.md  mvp-scope.md  pin-session-model.md  roadmap.md
gateway/: Cargo.toml  README.md
gateway/src/: app.rs  config.rs  error.rs  main.rs  models.rs  state.rs
gateway/src/routes/: auth.rs  handles.rs  mod.rs  payment_intents.rs  pin.rs  quotes.rs  sessions.rs
mobile/: README.md  app.json  index.js  package-lock.json  package.json
mobile/src/: App.tsx  config.ts
mobile/src/api/: client.ts
mobile/src/components/: QRScanner.tsx
mobile/src/context/: ContactContext.tsx  PinContext.tsx  WalletContext.tsx
mobile/src/features/pay/: payController.ts  payFlow.ts
mobile/src/features/pin/: pinPolicy.ts
mobile/src/hooks/: useQuote.ts
mobile/src/screens/: HomeScreen.tsx  LandingScreen.tsx  PayScreen.tsx  PaymentSuccessScreen.tsx  PinEnrollScreen.tsx  TransactionPinScreen.tsx
mobile/src/types/: api.ts  state.ts
mobile/src/utils/: polyfills.ts  prices.ts  session.ts
programs/: README.md
